--- a/fastadmin/application/admin/view/businesses/business/index.html
+++ b/fastadmin/application/admin/view/businesses/business/index.html
@@ -10,13 +10,20 @@
         color:white;
         z-index: 10;
     }
+    #canvas {
+        position: absolute;
+        top: 100px;
+        left: 0;
+        z-index: 210; 
 
+    }
     
 </style>
 
+<!-- <canvas id="canvas"></canvas> -->
 <div class="panel panel-default panel-intro">
     {:build_heading()}
-    <!-- <canvas  id="canvas"></canvas> -->
+    
     <div class="panel-body">
         <div id="myTabContent" class="tab-content">
             <div class="tab-pane fade active in" id="one">
@@ -42,18 +49,9 @@
                         data-operate-edit="{:$auth->check('businesses/business/edit')}"
                         data-operate-del="{:$auth->check('businesses/business/del')}" width="100%">
 
-                        <style>
-                            #canvas {
-                                position: absolute;
-                                top: 0;
-                                left: 0;
-                                z-index: 100;
-
-                            }
-                        </style>
-                        <canvas id="canvas"></canvas>
                     </table>
 
+                      <div><canvas  id="canvas"></canvas></div> 
                 </div>
             </div>
 
