--- a/fastadmin/application/admin/view/businesses/jump/edit.html
+++ b/fastadmin/application/admin/view/businesses/jump/edit.html
@@ -3,25 +3,25 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Task_id')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-task_id" data-rule="required" data-source="task/index" class="form-control selectpage" name="row[task_id]" type="text" value="{$row.task_id|htmlentities}">
+            <input id="c-task_id" data-rule="required" data-field="title" data-source="businesses/business/index" class="form-control selectpage" name="row[task_id]" type="text" value="{$row.task_id|htmlentities}">
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Original_id')}:</label>
+        <label class="control-label col-xs-12 col-sm-2">{:__('Current_id')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-original_id" data-rule="required" data-source="original/index" class="form-control selectpage" name="row[original_id]" type="text" value="{$row.original_id|htmlentities}">
+            <input id="c-current_id" data-rule="required" data-field="name" data-source="businesses/status/index" class="form-control selectpage" name="row[current_id]" type="text" value="{$row.current_id|htmlentities}">
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('End_id')}:</label>
+        <label class="control-label col-xs-12 col-sm-2">{:__('Next_id')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-end_id" data-rule="required" data-source="end/index" class="form-control selectpage" name="row[end_id]" type="text" value="{$row.end_id|htmlentities}">
+            <input id="c-next_id" data-rule="required" data-field="name" data-source="businesses/status/index" class="form-control selectpage" name="row[next_id]" type="text" value="{$row.next_id|htmlentities}">
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Role_id')}:</label>
+        <label class="control-label col-xs-12 col-sm-2">{:__('Processrole')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-role_id" data-rule="required" data-source="role/index" class="form-control selectpage" name="row[role_id]" type="text" value="{$row.role_id|htmlentities}">
+            <input id="c-ProcessRole" data-rule="required" data-field="name" data-source="us/department/index" class="form-control selectpage" name="row[ProcessRole]" type="text" value="{$row.ProcessRole|htmlentities}">
         </div>
     </div>
     <div class="form-group layer-footer">
