--- a/fastadmin/application/admin/view/businesses/relation/add.html
+++ b/fastadmin/application/admin/view/businesses/relation/add.html
@@ -3,7 +3,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Task_id')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-task_id" data-rule="required" data-source="task/index" class="form-control selectpage" name="row[task_id]" type="text" value="">
+            <input id="c-task_id" data-rule="required" data-source="businesses/task/index" class="form-control selectpage" name="row[task_id]" type="text" value="">
         </div>
     </div>
     <div class="form-group">
